--- a/app/src/main/res/layout/grocery_item.xml
+++ b/app/src/main/res/layout/grocery_item.xml
@@ -5,18 +5,18 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        card_view:cardBackgroundColor="#e6e6e6"
-        card_view:cardCornerRadius="8dp"
-        card_view:cardElevation="3dp"
-        card_view:cardMaxElevation="3dp"
-        card_view:contentPadding="25dp">
+        app:cardBackgroundColor="#e6e6e6"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="3dp"
+        app:cardMaxElevation="3dp"
+        app:contentPadding="25dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,6 +33,15 @@
 
             <TextView
                 android:id="@+id/price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:autoLink="phone"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/quantity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
