--- a/app/src/main/res/layout/activity_main_screen_management.xml
+++ b/app/src/main/res/layout/activity_main_screen_management.xml
@@ -71,12 +71,11 @@
         android:id="@+id/signOutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Sign Out"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settleUpButton"
-        tools:text="Sign Out" />
+        app:layout_constraintTop_toBottomOf="@+id/settleUpButton" />
 
     <Button
         android:id="@+id/settleUpButton"
