--- a/app/src/main/res/layout/grocery_item.xml
+++ b/app/src/main/res/layout/grocery_item.xml
@@ -18,38 +18,72 @@
         app:cardMaxElevation="3dp"
         app:contentPadding="25dp">
 
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/itemName"
-                android:layout_width="match_parent"
+                android:layout_width="225dp"
+                android:layout_gravity="start|top"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="ItemName"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:padding="5dp"/>
 
             <TextView
                 android:id="@+id/price"
-                android:layout_width="match_parent"
+                android:layout_width="225dp"
+                android:layout_gravity="start|center"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:autoLink="phone"
+                android:text="Price"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:padding="5dp"/>
 
             <TextView
                 android:id="@+id/quantity"
-                android:layout_width="match_parent"
+                android:layout_width="225dp"
+                android:layout_gravity="start|center|bottom"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:autoLink="phone"
+                android:text="Quantity"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:padding="5dp"/>
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/EditButton"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:text="Edit"
+            android:layout_gravity="right|top"
+            android:textSize="10sp"
+            android:padding="5dp"/>
+
+        <Button
+            android:id="@+id/DeleteButton"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:text="Delete"
+            android:layout_gravity="right|center"
+            android:textSize="10sp"
+            android:padding="5dp"/>
+
+        <Button
+            android:id="@+id/PurchaseButton"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:text="Add to Cart"
+            android:layout_gravity="right|center|bottom"
+            android:textSize="10sp"
+            android:padding="5dp"/>
 
     </androidx.cardview.widget.CardView>
 
