--- a/app/src/main/res/layout/grocery_item.xml
+++ b/app/src/main/res/layout/grocery_item.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="7dp"
         app:cardBackgroundColor="#e6e6e6"
         app:cardCornerRadius="8dp"
         app:cardElevation="3dp"
@@ -32,6 +32,7 @@
                 android:text="ItemName"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                android:textColor="@color/black"
                 android:padding="5dp"/>
 
             <TextView
@@ -43,6 +44,7 @@
                 android:text="Price"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                android:textColor="@color/black"
                 android:padding="5dp"/>
 
             <TextView
@@ -54,6 +56,7 @@
                 android:text="Quantity"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                android:textColor="@color/black"
                 android:padding="5dp"/>
 
         </LinearLayout>
@@ -77,7 +80,7 @@
             android:padding="5dp"/>
 
         <Button
-            android:id="@+id/PurchaseButton"
+            android:id="@+id/addToCartButton"
             android:layout_width="120dp"
             android:layout_height="35dp"
             android:text="Add to Cart"
