--- a/app/src/main/res/layout/activity_settle_up.xml
+++ b/app/src/main/res/layout/activity_settle_up.xml
@@ -7,6 +7,7 @@
     tools:context=".SettleUpActivity">
 
     <ListView
+        android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
