--- a/app/src/main/res/layout/purchased_item.xml
+++ b/app/src/main/res/layout/purchased_item.xml
@@ -78,7 +78,7 @@
             android:id="@+id/Settle"
             android:layout_width="130dp"
             android:layout_height="37dp"
-            android:text="Add to balance"
+            android:text="Add to balances"
             android:layout_gravity="right|center|bottom"
             android:textSize="10sp"
             android:padding="5dp"/>
