All buttons are added

--- a/app/src/main/res/layout/purchased_item.xml
+++ b/app/src/main/res/layout/purchased_item.xml
@@ -24,7 +24,7 @@
             android:layout_height="120dp"
             android:orientation="vertical">
 
-            <TextView
+            <EditText
                 android:id="@+id/ItemName2"
                 android:layout_width="225dp"
                 android:layout_gravity="start|top"
@@ -35,7 +35,7 @@
                 android:textColor="@color/black"
                 android:padding="5dp"/>
 
-            <TextView
+            <EditText
                 android:id="@+id/price2"
                 android:layout_width="225dp"
                 android:layout_gravity="start|center"
@@ -47,7 +47,7 @@
                 android:textColor="@color/black"
                 android:padding="5dp"/>
 
-            <TextView
+            <EditText
                 android:id="@+id/quantity2"
                 android:layout_width="225dp"
                 android:layout_gravity="start|center|bottom"
@@ -73,7 +73,26 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/EditButton2"
+            android:layout_width="130dp"
+            android:layout_height="37dp"
+            android:text="Confirm Edit"
+            android:layout_gravity="right|top"
+            android:textSize="10sp"
+            android:background="@drawable/buttonshape"
+            android:padding="5dp"/>
 
+        <Button
+            android:id="@+id/Cancel_Button"
+            android:layout_width="130dp"
+            android:layout_height="37dp"
+            android:text="Cancel Purchase"
+            android:layout_gravity="right|center"
+            android:textSize="10sp"
+            android:background="@drawable/buttonshape"
+
+            android:padding="5dp"/>
         <Button
             android:id="@+id/Settle"
             android:layout_width="130dp"
